--- a/admin/package.json
+++ b/admin/package.json
@@ -8,11 +8,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^12.4.0",
+    "firestore": "^1.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1"
   },
   "devDependencies": {
-    "vite": "^5.1.7"
+    "vite": "^7.1.10"
   }
 }
