--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
   "dependencies": {
     "firebase": "^12.4.0",
     "papaparse": "^5.5.3",
-    "react": "^19.2.0",                           
+    "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^6.14.1"                 
+    "react-router-dom": "^6.14.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@types/react": "^19.2.2",
     "@vitejs/plugin-react": "^5.0.4",
+    "@vitejs/plugin-vue": "^6.0.1",
     "typescript": "~5.8.2",
-    "vite": "^6.2.0"                             
+    "vite": "^6.2.0"
   }
 }
