--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,5 @@
   "allowImportingTsExtensions": true,
   "typeRoots": ["./node_modules/@types"]
   },
-  "include": ["components", "*.ts", "*.tsx"]
+  "include": ["asserts", "*.ts", "*.tsx"]
 }
